--- a/ICP2_700759079_Sai_Kumar_Mylavarapu.ipynb
+++ b/ICP2_700759079_Sai_Kumar_Mylavarapu.ipynb
@@ -12,11 +12,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "222b8a1e",
       "metadata": {
         "id": "222b8a1e",
-        "outputId": "40a468e7-b190-407d-9796-cb05ba76047b",
+        "outputId": "0241a4de-b6a0-41e2-ca5c-85e69c9724c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -26,8 +26,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "avg: 3500.0\n",
-            "Name :  Aditya Family:  varma Salary:  5000 department: Front-end\n",
+            "avg: 12500.0\n",
+            "Name :  sai Family:  kumar Salary:  15000 department: Analyst\n",
             "Total Employee 3\n"
           ]
         },
@@ -35,11 +35,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "('Apple', None, None)"
+              "('Tesla', None, None)"
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ],
       "source": [
@@ -68,8 +68,8 @@
         "    def displayEmployee(self):#another function for employee class\n",
         "        print(\"Name : \", self.name, \"Family: \", self.family , \"Salary: \", self.salary, \"department:\",self.department)\n",
         "\n",
-        "emp1 = Employee(\"sandeep\",\"lade\",2000,\"software\")#Employee objects creation with intialization\n",
-        "emp2 = Employee(\"jahnavi\",\"saripalli\",5000,\"fatbee\")\n",
+        "emp1 = Employee(\"sai\",\"kumar\",15000,\"Analyst\")#Employee objects creation with intialization\n",
+        "emp2 = Employee(\"mao\",\"wanwen\",10000,\"Testing\")\n",
         "print(\"avg:\",emp2.avg())#calling average function\n",
         "class FulltimeEmployee(Employee):#FulltimeEmployee class with Employee as its parent class\n",
         "    def __init__(self,name,family,salary,department,c_name):#constructor for FulltimeEmployee\n",
@@ -81,8 +81,8 @@
         "        if self.c_name not in self.c_name:\n",
         "            return \"\"\n",
         "        return self.c_name\n",
-        "adi=FulltimeEmployee(\"Aditya\",\"varma\",5000,\"Front-end\",\"Microsoft\")#FultimeEmployee object\n",
-        "adi.setCompany(\"Apple\")#calling the member functions of FulltimeEmploye and Employee\n",
+        "adi=FulltimeEmployee(\"sai\",\"kumar\",15000,\"Analyst\",\"Opera\")#FultimeEmployee object\n",
+        "adi.setCompany(\"Tesla\")#calling the member functions of FulltimeEmploye and Employee\n",
         "adi.getCompany(),adi.displayEmployee(),emp1.displayCount()"
       ]
     },
@@ -135,6 +135,14 @@
         "vec=np.where(np.isin(vec,vec.max(axis=1)),0,vec)#finding the max values in row and replacing them with zero using np.where() and np.max() function\n",
         "vec"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "G_juSRJoTFDD"
+      },
+      "id": "G_juSRJoTFDD"
     },
     {
       "cell_type": "code",
