--- a/ICP2_700759079_Sai_Kumar_Mylavarapu.ipynb
+++ b/ICP2_700759079_Sai_Kumar_Mylavarapu.ipynb
@@ -88,39 +88,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "c62a260f",
-      "metadata": {
-        "id": "c62a260f",
-        "outputId": "73de3306-93d6-411f-81e7-be64cd7f4b49"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10. 11. 12. 13. 14. 15. 16. 17. 18.\n",
-            " 19. 20.]\n",
-            "[[ 1.  2.  3.  4.  5.]\n",
-            " [ 6.  7.  8.  9. 10.]\n",
-            " [11. 12. 13. 14. 15.]\n",
-            " [16. 17. 18. 19. 20.]]\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "array([[ 1.,  2.,  3.,  4.,  0.],\n",
-              "       [ 6.,  7.,  8.,  9.,  0.],\n",
-              "       [11., 12., 13., 14.,  0.],\n",
-              "       [16., 17., 18., 19.,  0.]])"
-            ]
-          },
-          "execution_count": 6,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
       "source": [
         "\"\"\"\n",
         "2. Numpy  Using NumPy create random vector of size 20 having only float in the range 1-20.\n",
@@ -134,6 +101,42 @@
         "print(vec)\n",
         "vec=np.where(np.isin(vec,vec.max(axis=1)),0,vec)#finding the max values in row and replacing them with zero using np.where() and np.max() function\n",
         "vec"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "STymDBwBakXZ",
+        "outputId": "0f5e60ea-9584-4e38-ee1e-5acb1fe6bb35"
+      },
+      "id": "STymDBwBakXZ",
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10. 11. 12. 13. 14. 15. 16. 17. 18.\n",
+            " 19. 20.]\n",
+            "[[ 1.  2.  3.  4.  5.]\n",
+            " [ 6.  7.  8.  9. 10.]\n",
+            " [11. 12. 13. 14. 15.]\n",
+            " [16. 17. 18. 19. 20.]]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1.,  2.,  3.,  4.,  0.],\n",
+              "       [ 6.,  7.,  8.,  9.,  0.],\n",
+              "       [11., 12., 13., 14.,  0.],\n",
+              "       [16., 17., 18., 19.,  0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
       ]
     },
     {
